# gstreamermm-plugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  GstPlugin.cpp  GstPlugin.h  TestCppElement.cpp  TestCppElement.h  TestPlugin.cpp  TestPlugin.h
